--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,18 +8,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
+    <script src="js/login.js"></script>
+    <script src="js/all.js"></script>
+    <html lang="en">
     <link rel="stylesheet" type="text/css" href="./css/indexStyle.css">
 </head>
 
 <body>
     <div class="topnav">
         <div class="login-container">
-            <form action="signUp.html">
-                <input id="login-username" type="text" placeholder="Username" name="username">
-                <input id="login-password" type="text" placeholder="Password" name="psw">
-                <button id="login-submit" type="submit">Login</button>
-                <button><a href="./signUp.html">Sign Up<a></button>
+            <form id="login-form" action="signUp.html">
+                <input id="username" type="text" placeholder="Username" name="username">
+                <input id="password" type="text" placeholder="Password" name="psw">
+                <button onclick="displayLogin()" id="login" type="button">Login</button>
+                <button type="submit">Sign Up</button>
             </form>
 
         </div>
@@ -69,7 +80,7 @@
                 </p>
 
                 <table class="table">
-                    <caption id="userWatchlist">Your Watchlist</caption>
+                    <caption>Your Watchlist</caption>
                     <thead>
                         <tr>
                             <th scope="col">Ticker</th>
